--- a/Flaintartist/Base.lproj/Main.storyboard
+++ b/Flaintartist/Base.lproj/Main.storyboard
@@ -2220,7 +2220,7 @@
                     </tableView>
                     <tabBarItem key="tabBarItem" title="Item" id="RqQ-gw-Zv1"/>
                     <navigationItem key="navigationItem" title="Gallery" id="2gW-1E-7HK">
-                        <barButtonItem key="rightBarButtonItem" image="Settings-25" id="BbH-Ff-SdI">
+                        <barButtonItem key="rightBarButtonItem" image="Menu-20" id="BbH-Ff-SdI">
                             <color key="tintColor" red="0.12637259066104889" green="0.12639245390892029" blue="0.12636536359786987" alpha="1" colorSpace="calibratedRGB"/>
                             <connections>
                                 <action selector="settingsBtnTapped:" destination="WL6-Gx-0jC" id="f1Q-PR-46r"/>
@@ -2428,7 +2428,7 @@
                                                                 <rect key="frame" x="0.0" y="0.0" width="377" height="357"/>
                                                                 <autoresizingMask key="autoresizingMask"/>
                                                                 <subviews>
-                                                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="artist" translatesAutoresizingMaskIntoConstraints="NO" id="drf-YY-FKU">
+                                                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="drf-YY-FKU">
                                                                         <rect key="frame" x="8" y="0.0" width="361" height="357"/>
                                                                     </imageView>
                                                                 </subviews>
@@ -2495,12 +2495,12 @@
         <image name="Dismiss-30" width="23" height="23"/>
         <image name="Lock-50" width="50" height="50"/>
         <image name="Mail Filled-20" width="20" height="20"/>
+        <image name="Menu-20" width="20" height="20"/>
         <image name="More" width="16" height="16"/>
         <image name="More Filled-25" width="20" height="20"/>
         <image name="Picture" width="100" height="100"/>
         <image name="Profile Filled-25" width="25" height="25"/>
         <image name="Profile-25" width="25" height="25"/>
-        <image name="Settings-25" width="25" height="25"/>
         <image name="Star Filled-25" width="16" height="16"/>
         <image name="User" width="700" height="700"/>
         <image name="artist" width="4896" height="3264"/>
